--- a/AppleProject.Rmd
+++ b/AppleProject.Rmd
@@ -25,7 +25,7 @@ This paper uses a data set of single nucleotide polymorphisms (SNPs) from Canada
 ## Introduction
 
 ```{r import, include=FALSE, error=FALSE, warning=FALSE, message=FALSE}
-# Set working directory
+# Set working directory.
 setwd("/home/skirnir314/EECMSc/AppleProject")
 
 # Load libraries
