--- a/AppleProject.Rmd
+++ b/AppleProject.Rmd
@@ -135,7 +135,7 @@ p3.log <- read.delim("./Data/Snps/p3_ibd.log")
 
 ```
 
-To evaluate my hypothesis, I used a [data set](https://datadryad.org/stash/dataset/doi:10.5061/dryad.zkh1893cd) of 278,231 SNPs from 1,175 accessions in Canada's Apple Biodiversity Collection (ABC) (Migicovsky et al., 2022). To described these accessions, I used a [data set](https://github.com/MylesLab/abc-phenomics) from a phenomic review of the ABC (Watts et al., 2022). I filtered accessions using `r substring(R.Version()$version.string, 1, 15)` to include only *M. domestica* with either a cultivation or a release year (earliest was used). Because SNP data did not account for non-diploids, I dropped triploids by using the het function in Plink v1.90 to estimate heterozygosity and filtering out high values (see PloidismExploration.R). This resulted in `r nrow(apple.p.metadata)` remaining accessions, which I split into three time periods -- 1800-1899, 1900-1959, and 1960-Present -- reflecting stages in apple industry development.
+The data and code behind this report can be found at https://github.com/Skirnir3141/AppleProject. To evaluate my hypothesis, I used a [data set](https://datadryad.org/stash/dataset/doi:10.5061/dryad.zkh1893cd) of 278,231 SNPs from 1,175 accessions in Canada's Apple Biodiversity Collection (ABC) (Migicovsky et al., 2022). To describe these accessions, I used a [data set](https://github.com/MylesLab/abc-phenomics) from a phenomic review of the ABC (Watts et al., 2022). I filtered accessions using `r substring(R.Version()$version.string, 1, 15)` to include only *M. domestica* with either a cultivation or a release year (earliest was used). Because SNP data did not account for non-diploids, I dropped triploids by using the het function in Plink v1.90 to estimate heterozygosity and filtering out high values (see PloidismExploration.R). This resulted in `r nrow(apple.p.metadata)` remaining accessions, which I split into three time periods -- 1800-1899, 1900-1959, and 1960-Present -- reflecting stages in apple industry development.
 
 SNP quality control was conducted in Plink. SNPs were pruned for linkage disequilibrium (indep-pairwise 10 3 .05). SNPs with a minor allele frequency of less than .01 and a missingness of greater than .05 were removed. Accessions with greater than .1 missingness were removed. This resulted in `r prettyNum(as.numeric(stringr::word(p1.log[33, 1], 1)), big.mark = ",", scientific = FALSE)` SNPS and `r prettyNum(as.numeric(stringr::word(p1.log[33, 1], 4)), big.mark = ",", scientific = FALSE)` accessions for P1, `r prettyNum(as.numeric(stringr::word(p2.log[33, 1], 1)), big.mark = ",", scientific = FALSE)` SNPs and `r prettyNum(as.numeric(stringr::word(p2.log[33, 1], 4)), big.mark = ",", scientific = FALSE)` accessions for P2, and `r prettyNum(as.numeric(stringr::word(p3.log[33, 1], 1)), big.mark = ",", scientific = FALSE)` SNPs and `r prettyNum(as.numeric(stringr::word(p3.log[33, 1], 4)), big.mark = ",", scientific = FALSE)` accessions for P3.
 
@@ -383,7 +383,7 @@ Stevens, E.L.,Heckenberg, G., Roberson, E.D.O., Baugher, J.D., Downey, T.J., & P
 Volk, G., Cornille, A., Durel, C., & Gutierrez, B. (2021) 
 [Botany, Taxonomy, and Origins of the Apple](https://link-springer-com.iclibezp1.cc.ic.ac.uk/chapter/10.1007/978-3-030-74682-7_2). In: Podwyszyńska, M., & Marasek-Ciołakowska, A. (eds.) (2021) *The Apple Genome*. Springer Cham, pp. 19-32.
 
-Watts, S., Migicovsky, Z., McClure, K., Yu, C., Amyotte, B., Baker, T., Bowlby, D., Burgher, K., Butler, L., Donald, R., Fan, L., Fillmore, S., Flewelling, J., Gardner, K., Hodges, M., Hughes, T., Jagadeesan, V., Lewis, N., MacDonell, E., MacVicar, L., McElroy, M., Money, D., et al. (2021) [Quantifying apple diversity: A phenomic characterization of Canada’s Apple Biodiversity Collection](https://doi.org/10.1002/ppp3.10211). *Plants People Planet*. 3 (6), 747-760.
+Watts, S., Migicovsky, Z., McClure, K., Yu, C., Amyotte, B., Baker, T., et al. (2021) [Quantifying apple diversity: A phenomic characterization of Canada’s Apple Biodiversity Collection](https://doi.org/10.1002/ppp3.10211). *Plants People Planet*. 3 (6), 747-760.
 
 \newpage
 ## Working Style Assessment
